--- a/index.html
+++ b/index.html
@@ -10,16 +10,8 @@
     <style>
         body { font-family: 'Inter', sans-serif; }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
-  }
-}
-</script>
+    <script type="module" src="/index.tsx"></script>
+
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
